优化文件结构

--- a/Application/Admin/View/Public/login.html
+++ b/Application/Admin/View/Public/login.html
@@ -41,7 +41,7 @@
             </div>
 		</div>
 	</div>
-    <div id="ft">CopyRight&nbsp;2014&nbsp;&nbsp;版权所有&nbsp;&nbsp;uimaker.com专注于ui设计&nbsp;&nbsp;苏ICP备09003079号</div>
+    <div id="ft">CopyRight&nbsp;2014&nbsp;&nbsp;版权所有&nbsp;&nbsp;专注于ui设计&nbsp;&nbsp;苏ICP备09003079号</div>
 </body>
 <script type="text/javascript" src="__ADMIN__/js/jquery.js"></script>
 <script type="text/javascript" src="__ADMIN__/js/common.js"></script>
